fix horizontal scroll with 100% vs 100vw

--- a/styles/global.css
+++ b/styles/global.css
@@ -7,14 +7,15 @@
     local('Roboto-Light'), local('DroidSans'), local('Tahoma');
 }
 
-html,
-body {
-  /* font-family: system; */
-  /* font-family: 'Open Sans', Arial, Helvetica, sans-serif; */
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+html {
+  box-sizing: border-box;
+  overflow-y: scroll;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+html, body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   padding: 0;
@@ -28,6 +29,7 @@ body {
   font-size: 100%;
   line-height: 1.5rem;
   letter-spacing: 0.03125em;
+  width: 100vw;
 }
 article,
 aside,
@@ -132,6 +134,7 @@ hr {
   overflow: visible;
 }
 button {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -140,13 +143,8 @@ button {
   border: 2px solid var(--primary-color);
   border-radius: 5px;
   color: var(--black-color);
-  /* display: block; */
   padding: 5px;
   margin: 10px 5px;
-  /* width: 80%; */
-  /* max-height: 48px; */
-  /* max-width: 220px; */
-  /* padding: 5%; */
 }
 
 button:hover {
@@ -241,20 +239,7 @@ textarea {
   -webkit-appearance: button;
   font: inherit;
 }
-html {
-  /* font: 112.5%/1.45em 'Open Sans', Arial, Helvetica, sans-serif; */
-  box-sizing: border-box;
-  overflow-y: scroll;
-}
-* {
-  box-sizing: inherit;
-}
-*:before {
-  box-sizing: inherit;
-}
-*:after {
-  box-sizing: inherit;
-}
+
 
 img {
   max-width: 100%;
